--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
 <body>
 
     <header>
+
+        <nav>
+            <ul>
+                <li id="inicio" class="padrao-li menu"><a href="index.html#section-inicio"><img src="imagens/inicio.png"  alt=""></a></li>
+                <li id="ferramentas" class="padrao-li menu"><a href="index.html#section-servicos"><img src="imagens/servicos.png" alt=""></a></li>
+                <li id="telefone" class="padrao-li menu"><a href="index.html#section-contato"><img src="imagens/telefone.png" alt=""></a></li>
+                <li id="endereco" class="padrao-li menu"><a href="index.html#section-localizacao"><img src="imagens/local.png" alt=""></a></li>
+            </ul>
+        </nav>
+
         <img src="imagens/teste-quatro.jpg" id="fundo" alt="imagem de um homem soldando">
 
         <img src="imagens/botao-menu.png" id="hamburgao" alt="botão que abre o menu">
         <span id="x-menu"><img src="imagens/x.png" id="x" alt="imagem de uma letra x"></span>
-        <nav>
-            <ul>
-                <li id="inicio" class="padrao-li"><a href="index.html#section-inicio"><img src="imagens/inicio.png" alt=""></a></li>
-                <li id="ferramentas" class="padrao-li"><a href="index.html#section-servicos"><img src="imagens/servicos.png" alt=""></a></li>
-                <li id="telefone" class="padrao-li"><a href="index.html#section-contato"><img src="imagens/telefone.png" alt=""></a></li>
-                <li id="endereco" class="padrao-li"><a href="index.html#section-localizacao"><img src="imagens/local.png" alt=""></a></li>
-            </ul>
-        </nav>
 
         <h1>SERRALHERIA RDR</h1>
         
